force-app/main/default/objects/Compra_vinculada_ao_comodato__c/Compra_vinculada_ao_comodato__c.object-meta.xml
<CustomObject>
    <label>Venda vinculada ao comodato</label>
    <nameField>
        <displayFormat>{000}</displayFormat>
        <label>Número</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Vendas vinculadas ao comodato</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>