force-app/main/default/objects/Compra_vinculada_ao_comodato__c/fields/Data_da_compra__c.field-meta.xml
<CustomField>
    <fullName>Data_da_compra__c</fullName>
    <label>Data da compra</label>
    <type>Date</type>
</CustomField>