force-app/main/default/objects/Compra_vinculada_ao_comodato__c/fields/M_s__c.field-meta.xml
<CustomField>
    <fullName>M_s__c</fullName>
    <label>Mês</label>
    <length>25</length>
    <type>Text</type>
</CustomField>