force-app/main/default/objects/Compra_vinculada_ao_comodato__c/fields/Mes__c.field-meta.xml
<CustomField>
    <fullName>Mes__c</fullName>
    <label>Mês</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>