force-app/main/default/objects/Compra_vinculada_ao_comodato__c/fields/Pedido__c.field-meta.xml
<CustomField>
    <fullName>Pedido__c</fullName>
    <label>Pedido</label>
    <referenceTo>Order</referenceTo>
    <relationshipName>Compras_vinculadas_ao_comodato</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>