force-app/main/default/objects/Compra_vinculada_ao_comodato__c/fields/Valor_total__c.field-meta.xml
<CustomField>
    <fullName>Valor_total__c</fullName>
    <formula>Pedido__r.TotalAmount</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Valor total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>